Feature/create endpoint with paged elves list (#21)
* fix: add App\Models\Address

* feat: implement run function

* feat: function and documentation to list elves

* fix: remove error 500 try-catch

* feat: implementation of tests

* feat: api-docs.json update
