# routes/api.php
@@ -18,6 +18,7 @@ Route::prefix('v1')->middleware([EnsureApiKeyIsValid::class])->group(
         Route::put('/letter/{id}', [LettersController::class, 'update']);
 
         Route::post('/labor-registration', [LaborRegistrationController::class, 'create'])->name('labor-registration.create');
+        Route::get('/labor-registration/list', [LaborRegistrationController::class, 'index']);
     }
 );
 
